# ByteTrack-CPP

./: .gitignore  CMakeLists.txt  README.md  build.sh
data/MOT16-08-raw_labels/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+585 more)
include/: BYTETracker.h  STrack.h
src/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp  utils.cpp
test/: main.cpp  test_utils.cpp  test_utils.h
